# orthotech_dev_duplicate

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  linux-requirements.json  vcpkg.json  windows-requirements.json  windows-requirements.txt
.github/workflows/: CI.yml  build.yml  linux-build.yml
config/: dependencies.yml  submodule_branches.json
include/: calculations.hpp
scripts/: dev-setup.ps1  dev-setup.sh  generate_requirements.py  install-prerequisites.ps1  install-prerequisites.sh  install_requirements_windows.py  setup_all.py
src/: CMakeLists.txt  calculations.cpp  main.cpp  zenoh_pub.cpp  zenoh_sub.cpp
